pm2 + config.js + logs + de_graphql

--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
-  "name": "web",
-  "version": "0.0.0",
+  "name": "kaifazhe",
+  "description": "有道智选开发者系统 2018 新版",
+  "version": "0.0.1",
+  "keywords": [
+    "youdao",
+    "有道",
+    "智选",
+    "ssp",
+    "ant",
+    "design",
+    "react",
+    "redux",
+    "isomorphic"
+  ],
   "private": true,
   "engines": {
     "node": ">=6.13.1",
     "npm": ">=3.10.10"
   },
+  "author": "baishm",
   "browserslist": [">1%", "last 4 versions", "Firefox ESR", "not ie < 9"],
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.42",
+    "antd": "^3.5.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
+    "exif": "^0.6.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
+    "file-stream-rotator": "^0.2.1",
     "graphql": "^0.13.2",
     "history": "^4.7.2",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^8.2.0",
+    "morgan": "^1.9.0",
     "node-fetch": "^2.1.1",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
@@ -61,7 +78,7 @@
     "chokidar": "^2.0.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
-    "eslint": "^4.19.0",
+    "eslint": "^5.0.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-node": "^0.3.2",
