--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
     "file-stream-rotator": "^0.2.1",
+    "form-data": "^2.3.2",
     "graphql": "^0.13.2",
     "history": "^4.7.2",
     "isomorphic-style-loader": "^4.0.0",
@@ -40,6 +41,7 @@
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.1",
     "normalize.css": "^8.0.0",
+    "on-finished": "^2.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "pretty-error": "^2.1.1",
