--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "browserslist": [">1%", "last 4 versions", "Firefox ESR", "not ie < 9"],
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.42",
-    "antd": "^3.5.3",
+    "antd": "^3.2.1",
+    "babel-plugin-import": "^1.8.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.3",
     "exif": "^0.6.0",
@@ -36,8 +37,11 @@
     "form-data": "^2.3.2",
     "graphql": "^0.13.2",
     "history": "^4.7.2",
+    "immutable": "3.7.4",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^8.2.0",
+    "less-loader": "^4.1.0",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.1",
     "normalize.css": "^8.0.0",
@@ -58,6 +62,7 @@
     "serialize-javascript": "^1.4.0",
     "source-map-support": "^0.5.4",
     "sqlite3": "^4.0.0",
+    "style-loader": "^0.21.0",
     "universal-router": "^6.0.0",
     "whatwg-fetch": "^2.0.3"
   },
@@ -91,6 +96,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "flow-bin": "^0.68.0",
     "front-matter": "^2.3.0",
@@ -98,6 +104,8 @@
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
+    "less": "^2.3.1",
+    "less-vars-to-js": "^1.2.1",
     "lint-staged": "^7.0.0",
     "markdown-it": "^8.4.1",
     "mkdirp": "^0.5.1",
@@ -142,8 +150,7 @@
   },
   "lint-staged": {
     "*.{js,jsx}": ["eslint --no-ignore --fix", "git add --force"],
-    "*.{json,md,graphql}": ["prettier --write", "git add --force"],
-    "*.{css,less,styl,scss,sass,sss}": ["stylelint --fix", "git add --force"]
+    "*.{json,md}": ["prettier --write", "git add --force"]
   },
   "scripts": {
     "precommit": "lint-staged",
