--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "less-loader": "^4.1.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
+    "multer": "^1.3.1",
     "node-fetch": "^2.1.1",
     "normalize.css": "^8.0.0",
     "on-finished": "^2.3.0",
