--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "有道智选开发者系统 2018 新版",
   "version": "0.0.1",
   "keywords": [
-    "youdao",
-    "有道",
+    "yoouuddaaoo",
     "智选",
     "ssp",
     "ant",
